--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="ChainBridge" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="description" content="AstarBridge" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!-- Runtime environment variables -->
     <script src="%PUBLIC_URL%/chainbridge-runtime-config.js"></script>
     <!--
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Chainbridge</title>
+    <title>Astar - Chainbridge</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
