--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="ShidenBridge" />
+    <meta name="description" content="ChikochainBridge" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/shiden.png" />
     <!-- Runtime environment variables -->
     <script src="%PUBLIC_URL%/chainbridge-runtime-config.js"></script>
